使用 npm run parse 运行测试

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node ./bin/device-shadow",
     "test": "mocha test/lib; exit 0",
     "test-cov": "istanbul cover _mocha test/lib -- -R spec; exit 0",
-    "lint": "files=$(git diff --cached --name-only --diff-filter=ACM | grep '\\.js$'); jshint $files && jscs $files"
+    "lint": "files=$(git diff --cached --name-only --diff-filter=ACM | grep '\\.js$'); jshint $files && jscs $files",
+    "parse":"node ./bin/dataParsing"
   },
   "engines": {
     "node": "4.6.0"
