--- a/package.json
+++ b/package.json
@@ -17,12 +17,25 @@
   },
   "dependencies": {
     "bluebird": "^3.7.2",
+    "cls-bluebird": "^2.1.0",
+    "depd": "^2.0.0",
+    "dottie": "^2.0.3",
+    "inflection": "^2.0.1",
     "ioredis": "^2.5.0",
     "kafka-node": "^2.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "object-hash": "^3.0.0",
+    "pidusage": "^3.0.2",
+    "protobufjs": "^7.2.3",
+    "retry-as-promised": "^7.0.4",
+    "terraformer-wkt-parser": "^1.2.1",
+    "toposort-class": "^1.0.1",
     "uuid": "^3.1.0",
-    "winston": "^2.4.0"
+    "validator": "^13.9.0",
+    "winston": "^2.4.0",
+    "wkx": "^0.5.0"
   },
   "devDependencies": {
     "ajv": "^5.2.2",
