--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "node": "4.6.0"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bluebird": "^3.7.2",
     "cls-bluebird": "^2.1.0",
     "depd": "^2.0.0",
     "dottie": "^2.0.3",
+    "generic-pool": "^3.9.0",
     "inflection": "^2.0.1",
-    "ioredis": "^2.5.0",
+    "ioredis": "^2.4.0",
     "kafka-node": "^2.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "mysql2": "^3.2.1",
     "object-hash": "^3.0.0",
     "pidusage": "^3.0.2",
     "protobufjs": "^7.2.3",
     "retry-as-promised": "^7.0.4",
+    "sequelize": "^5.22.3",
     "terraformer-wkt-parser": "^1.2.1",
     "toposort-class": "^1.0.1",
     "uuid": "^3.1.0",
