--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "bluebird": "^3.7.2",
+    "bluebird": "^3.4.6",
     "cls-bluebird": "^2.1.0",
     "depd": "^2.0.0",
     "dottie": "^2.0.3",
@@ -28,7 +28,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
-    "mysql2": "^3.2.1",
+    "mysql": "2.15.0",
+    "mysql2": "1.5.3",
     "object-hash": "^3.0.0",
     "pidusage": "^3.0.2",
     "protobufjs": "^7.2.3",
@@ -39,7 +40,8 @@
     "uuid": "^3.1.0",
     "validator": "^13.9.0",
     "winston": "^2.4.0",
-    "wkx": "^0.5.0"
+    "wkx": "^0.5.0",
+    "mongoose": "4.13.14"
   },
   "devDependencies": {
     "ajv": "^5.2.2",
